@@ -66,6 +66,11 @@ service auth {
         group = PH_AUTH_MASTER_GROUP
         mode = 0666
     }
+    unix_listener auth-userdb {
+        user = PH_AUTH_MASTER_USER
+        group = PH_AUTH_MASTER_GROUP
+        mode = 0660
+    }
 }
 
 # Virtual mail accounts.
