@@ -157,6 +157,7 @@ CREATE TABLE IF NOT EXISTS mailbox (
     enablesievesecured TINYINT(1) NOT NULL DEFAULT 1,
     enableinternal TINYINT(1) NOT NULL DEFAULT 1,
     enabledoveadm TINYINT(1) NOT NULL DEFAULT 1,
+    `enablelib-storage` TINYINT(1) NOT NULL DEFAULT 1,
     lastlogindate DATETIME NOT NULL DEFAULT '0000-00-00 00:00:00',
     lastloginipv4 INT(4) UNSIGNED NOT NULL DEFAULT 0,
     lastloginprotocol CHAR(255) NOT NULL DEFAULT '',
@@ -189,6 +190,8 @@ CREATE TABLE IF NOT EXISTS mailbox (
     INDEX (enablesieve),
     INDEX (enablesievesecured),
     INDEX (enableinternal),
+    INDEX (enabledoveadm),
+    INDEX (`enablelib-storage`),
     INDEX (passwordlastchange),
     INDEX (expired),
     INDEX (active)
